fix: Update skills to not break on whitespace

--- a/css/thinkolson.css
+++ b/css/thinkolson.css
@@ -10,6 +10,10 @@ a.github {
   text-align: left;
 }
 
+.skill {
+  white-space: nowrap;
+}
+
 .thumbnail img {
   cursor: pointer !important;
 }
